set as default font family.

--- a/public/v2.0.0/index.html
+++ b/public/v2.0.0/index.html
@@ -6,14 +6,12 @@
     <meta name="description" content="Chris Chia.com - Software Developer at SAP Innovation Center, Singapore"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"> -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel='stylesheet' href='css/custom.css' />
-    <link rel='stylesheet' id='dashicons-css'  href='http://www.boylesoftware.com/blog/wp-includes/css/dashicons.min.css?ver=4.1' type='text/css' media='all' />
-    <link rel='stylesheet' id='admin-bar-css'  href='http://www.boylesoftware.com/blog/wp-includes/css/admin-bar.min.css?ver=4.1' type='text/css' media='all' />
+    <link title="timeline-styles" rel="stylesheet" href='https://cdn.knightlab.com/libs/timeline3/latest/css/fonts/font.georgia-helvetica.css' type='text/css' media='all' />
 </head>
 
 <body>
@@ -31,7 +29,6 @@
          start_at_end: true,
          start_zoom_adjust:	'1',
          start_at_slide:		'7',
-         font:	 'Georgia-Helvertica',
          source: 'model.jsonp'
         }
       </script>
